# uottahack7

./: README.md  docker-compose.yaml
.github/workflows/: publish.yaml
backend/: Dockerfile  README.md  pyproject.toml
backend/backend/: app.py  models.py  settings.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.js  page.js  page.module.css
