[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Natalia Maximo <tal.afp.max@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.6"
pydantic = "^2.10.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
