[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Natalia Maximo <tal.afp.max@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.115.6"}
pydantic = "^2.10.5"
sqlmodel = "^0.0.22"
pydantic-settings = "^2.7.1"
httpx = "^0.28.1"
mysql-connector-python = "^9.1.0"
pymysql = "^1.1.1"
cryptography = "^44.0.0"
aiodecorators = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
